k8s/calendar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-service
  labels:
    app: calendar-service
spec:
  type: ClusterIP
  ports:
    - port: 8084
      targetPort: 8084
  selector:
    app: calendar-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-service
  labels:
    app: calendar-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar-service
  template:
    metadata:
      labels:
        app: calendar-service
    spec:
      containers:
        - name: app
          image: ut4228/booking-calendar-service:1.0.0
          ports:
            - containerPort: 8084
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 20
            periodSeconds: 20
